grafana/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "lets-encrypt-issuer"
spec:
  tls:
    - hosts:
        - grafana.questdev.xyz
      secretName: grafana-tls
  rules:
    - host: grafana.questdev.xyz
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 80
