grafana/proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana-proxy
  namespace: grafana
spec:
  routes:
    - services:
        - name: grafana
          port: 80
